[package]
name = "pasta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"

p3-dft = { path = "../dft" }
p3-field = { path = "../field" }
p3-matrix = { path = "../matrix" }
p3-mds = { path = "../mds" }
p3-maybe-rayon = { path = "../maybe-rayon" }
p3-poseidon2 = { path = "../poseidon2" }
p3-symmetric = { path = "../symmetric" }
p3-util = { path = "../util" }

ff = { version = "0.13", features = ["derive", "derive_bits"] }
num-bigint = { version = "0.4.3", default-features = false }
rand = "0.8.5"
serde = { version = "1.0", default-features = false, features = ["derive"] }
pasta_curves = "0.5.1"
hex = { version = "0.4.3", features = ["serde"] }
num-traits = { version = "0.2.18", default-features = false }
num-integer = "0.1.46"
nums = "0.1.0"

[dev-dependencies]
p3-field-testing = { path = "../field-testing" }

criterion = "0.5.1"
num-traits = "0.2.16"
serde_json = "1.0.113"